--- a/css/yearOfBirth.css
+++ b/css/yearOfBirth.css
@@ -86,13 +86,15 @@
     color: rgba(3, 153, 0, 1);
 }
 
-.yearOfBirthTitle{
+.gameTitle{
     font-family: "Montserrat Alternates";
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
     line-height: 20px;
     color: #000000;
+
+    text-align: center;
 
     margin-top: 36px;
 }
