--- a/css/style.css
+++ b/css/style.css
@@ -8,3 +8,5 @@
 @import url(./rockScissorsPaper.css);
 @import url(./yearOfBirth.css);
 @import url(./guessNumber.css);
+@import url(./calculator.css);
+@import url(./rexRunner.css);
