--- a/css/rexRunner.css
+++ b/css/rexRunner.css
@@ -17,7 +17,7 @@
     height: 74px;
     width: 68px;
 
-    background-image: url('./img/dino/standing_still.png');
+    background-image: url('../img/dino/standing_still.png');
     background-size: cover;
 
     /* transition: transform 0.5s ease-in-out; */
@@ -35,12 +35,12 @@
 
 @keyframes moveDinoAnimation {
     0%, 100%{
-        background-image: url('./img/dino/dino_run1.png');
+        background-image: url('../img/dino/dino_run1.png');
         background-size: cover;
     }
 
     50% {
-        background-image: url('./img/dino/dino_run2.png');
+        background-image: url('../img/dino/dino_run2.png');
         background-size: cover;
     }
 }
