--- a/css/style.css
+++ b/css/style.css
@@ -10,3 +10,7 @@
 @import url(./guessNumber.css);
 @import url(./calculator.css);
 @import url(./rexRunner.css);
+@import url(./timeCalculator.css);
+@import url(./biggestNumber.css);
+@import url(./football.css);
+
