--- a/css/style.css
+++ b/css/style.css
@@ -13,4 +13,5 @@
 @import url(./timeCalculator.css);
 @import url(./biggestNumber.css);
 @import url(./football.css);
+@import url(./chooseScientist.css);
 
