--- a/css/yearOfBirth.css
+++ b/css/yearOfBirth.css
@@ -1,5 +1,5 @@
 .title {
-    font-family: Montserrat Alternates;
+    font-family: "Montserrat Alternates";
     font-size: 24px;
     font-weight: 400;
     line-height: 29px;
