--- a/css/style.css
+++ b/css/style.css
@@ -14,4 +14,5 @@
 @import url(./biggestNumber.css);
 @import url(./football.css);
 @import url(./chooseScientist.css);
+@import url(./slider.css);
 
