--- a/css/biggestNumber.css
+++ b/css/biggestNumber.css
@@ -12,7 +12,7 @@
 
     border-radius: 20px;
 
-    box-shadow: 3px 4px 0 0 rgb(194, 194, 194);
+    box-shadow: 3px 4px 0 0 rgba(0, 0, 0, 0.25);
 
     display: flex;
     align-items: center;
@@ -59,7 +59,7 @@
 
     color: rgba(255, 255, 255, 1);
 
-    font-family: Montserrat Alternates;
+    font-family: "Montserrat Alternates";
     font-size: 12px;
     font-weight: 400;
     line-height: 15px;
