--- a/css/header.css
+++ b/css/header.css
@@ -5,7 +5,12 @@ header {
    display: flex;
    align-items: center;
    padding-left: 0;
-   /* border: 1px solid black; */
+
+   font-family: "Montserrat Alternates";
+   font-size: 14px;
+   font-weight: 400;
+   line-height: 29px;
+   letter-spacing: 0em;
 }
 
 header .logo {
