--- a/css/yearOfBirth.css
+++ b/css/yearOfBirth.css
@@ -51,7 +51,7 @@
     align-items: center;
 
 
-    box-shadow: 3px 4px 0 0 rgb(194, 194, 194);
+    box-shadow: 3px 4px 0 0 rgba(0, 0, 0, 0.25);
 }
 
 .input-search>input {
@@ -66,7 +66,7 @@
 
 
 #result {
-    font-family: Montserrat Alternates;
+    font-family: "Montserrat Alternates";
     font-size: 12px;
     font-weight: 400;
     line-height: 15px;
@@ -92,7 +92,6 @@
     font-weight: 400;
     font-size: 16px;
     line-height: 20px;
-    color: #000000;
 
     text-align: center;
 
