--- a/css/modalStart.css
+++ b/css/modalStart.css
@@ -2,9 +2,10 @@ body {
    background-color: rgba(0, 0, 0, 0.2);
 }
 
-/* modal-start */
+/* modal-start  */
 
 .modal-start,
+
 .modal-subscribe {
    width: 576px;
    height: 316px;
@@ -21,7 +22,7 @@ body {
    justify-content: center;
    align-items: center;
 
-   display: none;
+   display: flex;
 }
 
 .modal-window {
@@ -71,6 +72,7 @@ body {
 }
 
 .modal-window form input::placeholder,
+
 .modal-window form input {
    font-family: "Montserrat Alternates";
    font-style: normal;
@@ -100,7 +102,7 @@ body {
    background-repeat: no-repeat;
 }
 
-.icon-close {
+/* .icon-close {
    background: url(../img/icon/iconClose.svg);
    right: 30px;
    top: 30px;
@@ -108,6 +110,36 @@ body {
    height: 15px;
    position: absolute;
    background-repeat: no-repeat;
+} */
+
+#close {
+   width: 15px;
+   height: 15px;
+   top: 30px;
+   left: 418px;
+   border: 1px;
+   position: absolute;
+
+
+   color: rgba(0, 0, 0, 1);
+   background-color: rgb(255, 255, 255);
+   border: 1px solid rgb(255, 255, 255);
+
+
+}
+
+
+#closeSave {
+   width: 15px;
+   height: 15px;
+   top: 30px;
+   left: 531px;
+   border: 1px;
+   position: absolute;
+
+   color: rgb(0, 0, 0);
+   background-color: rgb(255, 255, 255);
+   border: 1px solid rgb(255, 255, 255);
 }
 
 .icon-bar {
@@ -134,11 +166,11 @@ body {
    top: 154px;
 }
 
-/* modal-subscribe */
 
 .modal-subscribe {
    width: 463px;
    height: 245px;
+   display: none;
 }
 
 .modal-subscribe i:nth-child(n + 3) {
