--- a/css/chooseScientist.css
+++ b/css/chooseScientist.css
@@ -9,6 +9,8 @@
 
     display: flex;
     flex-wrap: wrap;
+
+    position: relative;
 }
 
 .scientist{
@@ -37,6 +39,7 @@
 
 .filters{
     width: 945px;
+    height: 270px;
 
     display: flex;
     flex-wrap: wrap;
@@ -45,6 +48,8 @@
     align-items: center;
 
     margin-bottom: 36px;
+
+    position: relative;
 }
 
 .filter:nth-child(odd){
